<resources>
    <string name="fruit_bascket">水果篮</string>
    <string name="upload_fruit">上传水果</string>
    <string name="look_up_fruit">查看</string>
    <string name="edit_fruit">编辑</string>
    <string name="eat_fruit">吃水果</string>
    <string name="season">季节</string>
    <string name="spring">春季</string>
    <string name="summer">夏季</string>
    <string name="fall">秋季</string>
    <string name="winter">冬季</string>
    <string name="awake">提醒</string>
    <string name="welcom_txt">从此......\n再也不用担心浪费水果了！</string>
    <string name="take_photo">拍照</string>
    <string name="fruit_name">水果名称</string>
    <string name="which_fruit">什么水果</string>
    <string name="deadline">截止日期</string>
    <string name="fresh_time">保鲜时长</string>
    <string name="fresh_time_hint">水果保鲜期是多少天</string>
    <string name="zhi_ding">置顶</string>
    <string name="awake_time_3">前三天20:00</string>
    <string name="awake_time_2">前二天20:00</string>
    <string name="awake_time_1">前一天20:00</string>
    <string name="spring2">产于3-5月的水果</string>
    <string name="summer2">产于6-8月的水果</string>
    <string name="fall2">产于9-11月的水果</string>
    <string name="winter2">产于12-2月的水果</string>
    <string name="setting1">说明</string>
    <string name="setting11">对此软件的各种问题的进一步说明</string>
    <string name="setting2">联系作者</string>
    <string name="setting22">如果你想要跟直接的交流，这里是制作者的联系方式</string>
    <string name="setting3">关于</string>
    <string name="setting33">此软件的版本信息</string>
    <string name="setting4">检测更新</string>
    <string name="setting44">这里可以检测下载最新版本</string>
    <string name="setting1_11">APP的设计规范</string>
    <string name="setting1_12">设计规范会尽可能的遵守Android design(官方建议的设计规范)，争取为你带来最新的特性。</string>
    <string name="setting1_21">APP的定位和后续更新方向</string>
    <string name="setting1_22">这款软件的定位很简单，就如名字所示，为了提醒忙碌的上班族，每天吃点水果。合理的生活总体来说
        定位是个健康的提醒APP， 后续更新会完善水果类别，丰富信息。直接扫描图片，无需手动输入，让你更轻松快捷。</string>
    <string name="setting1_31">意见联系作者</string>
    <string name="setting1_32">微博搜索：王琳-吼吼吼UI这个小世界    关注的微博！即可和作者直接交流。</string>
    <string name="setting2_1">微博搜索：王琳-吼吼吼UI这个小世界,快来关注吧！</string>
    <string name="setting3_1">版本号1.1，第一次更新。</string>
    <string name="setting4_1">暂无新版本发布。</string>
    <string name="ok_queding">确定</string>
    <string name="normal_changjian">常见</string>
    <string name="xi_gua">西瓜</string>
    <string name="tao">桃</string>
    <string name="li">梨</string>
    <string name="pu_tao">葡萄</string>
    <string name="ying_tao_fan_qie">樱桃番茄</string>
    <string name="bo_luo">菠萝</string>
    <string name="huo_long_guo">火龙果</string>
    <string name="cao_mei">草莓</string>
    <string name="mang_guo">芒果</string>
    <string name="tian_gua">甜瓜</string>
    <string name="li_zi">李子</string>
    <string name="hong_zao">红枣(鲜)</string>
    <string name="ping_guo">苹果</string>
    <string name="xiang_jiao">香蕉</string>
    <string name="cheng">橙</string>
    <string name="you_zi">柚子</string>
    <string name="mi_hou_tao">猕猴桃</string>
    <string name="jv_zi">橘子</string>
    <string name="mu_gua">木瓜</string>
    <string name="qing_ping_guo">青香蕉苹果</string>
    <string name="xue_lian_guo">雪莲果</string>
    <string name="fruit_des">%1$d大卡/100克</string>
    <string name="apple11">适宜</string>
    <string name="apple12">苹果性凉，有补心润肺、生津解毒、益气和胃、
        醒酒平肝的功效，尤其适合热病伤津、咽干口渴、肺燥干咳、消化不良、气滞不通、烦热口渴、
        便秘、食欲不振、饮酒过度之人食用。</string>
    <string name="apple21">苹果推荐做法</string>
    <string name="apple22">苹果玉竹蜜枣煲瘦肉</string>
    <string name="apple23">苹果派</string>
    <string name="apple31">禁忌</string>
    <string name="apple32">脾胃虚寒、胃痛者。不宜多食。</string>
    <string name="apple41">营养评价</string>
    <string name="apple42">一种碳水化合物、水分。纤维、钾含量都较高的水果。</string>
    <string name="apple5">52大卡/100克(可食用部分)</string>
    <string name="banana5">91大卡/100克</string>
    <string name="banana31">香蕉推荐做法</string>
    <string name="banana32">柠檬奶油香蕉</string>
    <string name="banana52">一种高碳水化合物、高钾含量的水果，在水果中热量偏高，减肥时不适合大量食用。</string>
    <string name="banana42">香蕉含糖量较高，糖尿病患者慎食。不宜空腹吃。</string>
    <string name="banana22">中医认为香蕉具有益阴生津，润肺滑肠，清热解毒，醒酒，抑菌，降压等功效。
        特别适合热病烦渴，便秘，大便干结，痔疮出血等人食用。过冬后采摘、春季上市的香蕉口感饱满、味道最好。雨季收获的香蕉则略松软。</string>
    <string name="applezhou1">玉竹养阴润燥，生津止渴；苹果配以玉竹、蜜枣煲瘦猪肉，清润可口，能生津养液、清泄燥邪
        、滋润肺腑，对“燥气当令”之时，人们普遍感觉干燥气闷。入口燥咽干、干咳等十分有效。</string>
    <string name="zhunbei">准备</string>
    <string name="zhizuofangfa">制作方法</string>
    <string name="peiliao">主料：苹果2个、猪瘦肉300克。\n配料：盐适量。</string>
    <string name="zhizuo">苹果洗净。去皮、去核、切块；玉竹稍浸泡；蜜枣洗净，去核；猪瘦肉洗净、切块，与生姜一起放进
        瓦煲内，加入清水2500毫升(约十碗水)，武火煲沸后，改文火煲约2小时，调入适量食盐便可。此量可供3-4人用。</string>
    <string name="pick_date">选择日期</string>
    <string name="pick_time">选择时间</string>
    <string name="toast_date">不能选择今天以前的日期</string>
    <string name="toast_date2">不能选择今天以后的日期</string>
    <string name="some_day">%1$d天</string>
    <string name="addfruit_toast_1">请先给水果拍个照吧</string>
    <string name="addfruit_toast_2">请输入水果的名字</string>
    <string name="shui_guo_lan_1">健康吃水果</string>
    <string name="shui_guo_lan_2">从此......\n你过上健康、快乐、幸福的小日子</string>
    <string name="shui_guo_lan_3">倒数日</string>
    <string name="offset">%1$d天</string>
    <string name="day1">周一</string>
    <string name="day2">周二</string>
    <string name="day3">周三</string>
    <string name="day4">周四</string>
    <string name="day5">周五</string>
    <string name="day6">周六</string>
    <string name="day7">周日</string>
    <string name="jianyi">小小建议</string>
    <string name="look_awake">苹果快要腐烂，需尽快吃完哦！\n建议你打成苹果汁搭配牛奶、蜂蜜一起喝。
        可以缓解便秘、消除水肿，适宜减肥时食用。</string>
    <string name="fulan1">已经腐烂</string>
    <string name="fulan2">距离腐烂</string>
    <string name="look">查看</string>
    <string name="edit">编辑</string>
    <string name="my_fruit">我的水果篮</string>
    <string name="eat1">今日已吃</string>
    <string name="eat2">今日还没有吃水果</string>
    <string name="eat3">快去水果篮上传水果吧！</string>
    <string name="toast_eat">只能吃今天的水果</string>
    <string name="toast_eat2">今天已经吃过了</string>
    <string name="awake1">提醒方式设置</string>
    <string name="awake2">通知提醒</string>
    <string name="awake3">窗口提醒</string>
    <string name="awake4">吃水果提醒设置</string>
    <string name="awake5">吃水果提醒设置</string>
    <string name="awake6">每天</string>
     <string name="AlarmAnniServiceNotify">AlarmAnniReceiver_new_anni</string>
     <string name="MessageServiceNotify">MessageServiceNotify</string>
     <string name="LocationUpLoadTask">LocationUpLoadTask</string>
     <string name="noti1">该吃水果了！</string>
     <string name="noti2">有水果过期了</string>
     <string name="noti3">该吃水果了！\n有水果过期了</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="ok_queren">确认</string>
    <string name="cancel_quxiao">取消</string>
    <string name="next">下一步</string>
    <string name="set_password">设置密码</string>
    <string name="verfiy_code">验证</string>
    <string name="err_param">参数错误!</string>
    <string name="err_server_param">服务器参数错误!</string>
    <string name="create_family_title">您还没有家庭，可以选择</string>
    <string name="create_family">创建家庭</string>
    <string name="join_family">加入家庭</string>
    <string name="health">健康</string>
    <string name="waitting">敬请期待</string>
    <string name="input_min_len">输入的信息不能小于%1$s哦!</string>
    <string name="input_max_len">输入的信息不能超过%1$s哦!</string>
    <string name="local">在哪儿</string>
    <string name="family_location">家庭位置</string>
    <string name="func">我的设备</string>
    <string name="my_family">我的家人</string>
    <string name="input_count_null">输入的信息不能为空哦!</string>
    <string name="message_board">家庭圈</string>
    <string name="photo_wall">照片墙</string>
    <string name="data_loading">正在努力的处理中&#8230;请稍后</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_forget_passwd">忘记密码？</string>
    <string name="login_auto">自动登录</string>
    <string name="login_again">重新登录</string>
    <string name="login_other">异地登录</string>
    <string name="login_other_alert">下线通知</string>
    <string name="login_other_alertinfo">你的账号正在另一台手机登录。如非本人操作，则密码可能已泄露，建议及时修改账号密码.</string>
    <string name="err_no_phone">请输入正确的手机号码</string>
    <string name="err_isnot_phone">请输入正确的手机号码</string>
    <string name="err_no_passwd">请输入密码</string>
    <string name="err_passwd_length">密码位数不正确</string>
    <string name="err_verfiycode_length">验证码位数不正确</string>
    <string name="err_login">用户名或密码输入错误，请确认!</string>
    <string name="err_phone_isused">该手机号码已注册过了,换一个号码再试试吧</string>
    <string name="err_verfiycode">验证码错误,请重新输入吧</string>
    <string name="err_verfiycode_timeout">上一条验证码失效了,请重新获取验证码.</string>
    <string name="err_reg_setpasswd">服务器因为我们操作太慢,拒绝了这一次的注册申请.</string>
    <string name="err_net_connected">当前网络不可用，请检查您的网络设置</string>
    <string name="err_forget_phone">该手机号码未注册过哟!</string>
    <string name="err_login_invalid">你登录太长时间了哟!</string>
    <string name="err_opt_noright">数据已被更新或删除!</string>
    <string name="err_db_error">数据库错误，删除未成功！</string>
    <string name="err_login_timeout">登录超时，请重新登录！</string>
    <string name="signup_text">此号码可以用于登陆和重置密码</string>
    <string name="signup_next_hint">点击下一步，系统会发送验证码至您的手机，请查收！ </string>
    <string name="signup_phone">请输入手机号</string>
    <string name="signup_verfiycode">请输入您的验证码</string>
    <string name="signup_agree">请仔细阅读长虹协议！</string>
    <string name="signup_agree_read">阅读并同意</string>
    <string name="signup_passwd">6&#8211;16位数字或字母的组合</string>
    <string name="signup_err_passwd">密码位数不够，请输入6&#8211;16位由数字或字母的组合的密码</string>
    <string name="signup_err_verify">验证码输入不正确，请核对后重新输入</string>
    <string name="signup">注册</string>
    <string name="signup_forget">找回密码</string>
    <string name="requestverfiycode">重新获取</string>
    <string name="potocol_name">长虹软件许可及服务协议</string>
    <string name="family_assets">家庭资产</string>
    <string name="help_center">帮助中心</string>
    <string name="send">发送</string>
    <string name="photo">照片</string>
    <string name="describe">描述</string>
    <string name="upload_photo">上传照片</string>
    <string name="input_photo_desc">点击输入照片描述</string>
    <string name="question_one">&#160;&#160;&#160;1.为什么我不能同意别人给我发的邀请加入家庭？</string>
    <string name="answer_one">A:一个用户只能加入一个家庭，家庭成员想加入其它家庭必须退出现有家庭。</string>
    <string name="question_two">&#160;&#160;&#160;2.金币领取规则？</string>
    <string name="answer_two">A:每人每天能领取50金币，金币计入家庭资产和个人贡献，用户退出家庭后家庭资产不变，个人贡献清零。</string>
    <string name="question_three">&#160;&#160;&#160;3.户主专享权利是哪些？</string>
    <string name="answer_three">A:邀请成员、移除成员、解散家庭、修改家庭信息、批量删除照片等。</string>
    <string name="question_four">&#160;&#160;&#160;4.不能查看到家人的位置？</string>
    <string name="answer_four">A:家人可能未启动程序或选择了“隐身模式”上传位置。</string>
    <string name="question_five">&#160;&#160;&#160;5.我为什么不能上传照片？</string>
    <string name="answer_five">A:照片墙最多只能上传18张照片，超过则不能继续上传。</string>
    <string name="question_six">&#160;&#160;&#160;6.我为什么不能删除照片？</string>
    <string name="answer_six">A:普通成员只能删除自己上传的照片，户主才能删除其他人上传的照片。</string>
    <string name="question_seven">&#160;&#160;&#160;7.“添加设备”是什么意思？</string>
    <string name="answer_seven">A:用户可以绑定长虹关爱系列功能手机，这样就能在“在哪儿”页面中查看功能机的位置及信息。</string>
    <string name="question_eight">&#160;&#160;&#160;8.我可以不加入家庭么？</string>
    <string name="answer_eight">A:可以，但是不加入家庭，就只能使用在哪儿功能，可以查看自己的位置和足迹！</string>
    <string name="question_nine">&#160;&#160;&#160;9.何为户主？</string>
    <string name="answer_nine">A:户主为家庭创建人，享有更多权限。</string>
    <string name="question_ten">&#160;&#160;&#160;10.为什么足迹里面有去过的地方没有显示出来？</string>
    <string name="answer_ten">A:请确保网络畅通，足迹是通过位置来确定，如果网络不好时无法定位，就不能获取位置信息。</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="loading">加载中</string>
    <string name="message_liu_yan">留言</string>
</resources>