<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ed5736"
            android:gravity="center"
            android:text="@string/help_center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_large_size" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_back_selector" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#E1E1D9"
        android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/problem_1_1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/linear"
                    android:drawableBottom="@drawable/linear"
                    android:drawablePadding="10dp"
                    android:background="#F8F4EB"
                    android:gravity="center_vertical"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_smaller_size" 
                    android:text="@string/question_one"/>

                <TextView
                    android:id="@+id/answer_1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FDFCF7"
                    android:padding="12dp"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_tiny_size" 
                    android:text="@string/answer_one" />

                <TextView
                    android:id="@+id/problem_1_2"
                    android:layout_width="fill_parent"
                    android:layout_height="34dp"
                    android:drawableTop="@drawable/linear"
                    android:drawableBottom="@drawable/linear"
                    android:background="#F8F4EB"
                    android:gravity="center_vertical"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_smaller_size"
                    android:text="@string/question_two" />

                <TextView
                    android:id="@+id/answer_1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FDFCF7"
                    android:padding="10dp"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_tiny_size"
                    android:text="@string/answer_two" />

                <TextView
                    android:id="@+id/problem_1_3"
                    android:layout_width="fill_parent"
                    android:layout_height="34dp"
                    android:drawableTop="@drawable/linear"
                    android:drawableBottom="@drawable/linear"
                    android:background="#F8F4EB"
                    android:gravity="center_vertical"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_smaller_size"
                    android:text="@string/question_three" />

                <TextView
                    android:id="@+id/answer_1_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FDFCF7"
                    android:padding="10dp"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_tiny_size"
                    android:text="@string/answer_three" />

                <TextView
                    android:id="@+id/problem_1_4"
                    android:layout_width="fill_parent"
                    android:layout_height="34dp"
                    android:drawableTop="@drawable/linear"
                    android:drawableBottom="@drawable/linear"
                    android:background="#F8F4EB"
                    android:gravity="center_vertical"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_smaller_size"
                    android:text="@string/question_four" />

                <TextView
                    android:id="@+id/answer_1_4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#FDFCF7"
                    android:padding="10dp"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_tiny_size"
                    android:text="@string/answer_four" />

                <TextView
                    android:id="@+id/problem_1_5"
                    android:layout_width="fill_parent"
                    android:layout_height="34dp"
                    android:drawableTop="@drawable/linear"
                    android:drawableBottom="@drawable/linear"
                    android:background="#F8F4EB"
                    android:gravity="center_vertical"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_smaller_size"
                    android:text="@string/question_five" />

                <TextView
                    android:id="@+id/answer_1_5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#FDFCF7"
                    android:padding="10dp"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_tiny_size"
                    android:text="@string/answer_five" />
  

                <TextView
                    android:id="@+id/problem_1_6"
                    android:layout_width="fill_parent"
                    android:layout_height="34dp"
                    android:drawableTop="@drawable/linear"
                    android:drawableBottom="@drawable/linear"
                    android:background="#F8F4EB"
                    android:gravity="center_vertical"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_smaller_size"
                    android:text="@string/question_six"/>

                <TextView
                    android:id="@+id/answer_1_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FDFCF7"
                    android:padding="10dp"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_tiny_size"
                    android:text="@string/answer_six" />

                <TextView
                    android:id="@+id/problem_1_7"
                    android:layout_width="fill_parent"
                    android:layout_height="34dp"
                    android:drawableTop="@drawable/linear"
                    android:drawableBottom="@drawable/linear"
                    android:background="#F8F4EB"
                    android:gravity="center_vertical"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_smaller_size"
                    android:text="@string/question_seven" />

                <TextView
                    android:id="@+id/answer_1_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FDFCF7"
                    android:padding="10dp"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_tiny_size"
                    android:text="@string/answer_seven"/>


                <TextView
                    android:id="@+id/problem_1_8"
                    android:layout_width="fill_parent"
                    android:layout_height="34dp"
                    android:drawableTop="@drawable/linear"
                    android:drawableBottom="@drawable/linear"
                    android:background="#F8F4EB"
                    android:gravity="center_vertical"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_smaller_size"
                    android:text="@string/question_eight" />

                <TextView
                    android:id="@+id/answer_1_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FDFCF7"
                    android:padding="10dp"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_tiny_size"
                    android:text="@string/answer_eight" />

                <TextView
                    android:id="@+id/problem_1_9"
                    android:layout_width="fill_parent"
                    android:layout_height="34dp"
                    android:drawableTop="@drawable/linear"
                    android:drawableBottom="@drawable/linear"
                    android:background="#F8F4EB"
                    android:gravity="center_vertical"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_smaller_size"
                    android:text="@string/question_nine" />

                <TextView
                    android:id="@+id/answer_1_9"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#FDFCF7"
                    android:padding="10dp"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_tiny_size"
                    android:text="@string/answer_nine" />

                <TextView
                    android:id="@+id/problem_1_10"
                    android:layout_width="fill_parent"
                    android:layout_height="34dp"
                    android:drawableTop="@drawable/linear"
                    android:drawableBottom="@drawable/linear"
                    android:background="#F8F4EB"
                    android:gravity="center_vertical"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_smaller_size"
                    android:text="@string/question_ten" />

                <TextView
                    android:id="@+id/answer_1_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FDFCF7"
                    android:padding="10dp"
                    android:textColor="#716861"
                    android:textSize="@dimen/txt_tiny_size"
                    android:text="@string/answer_ten" />
            </LinearLayout>


    </ScrollView>

</LinearLayout>