<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/wl_title1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="42dp"
        android:text="@string/setting1_11"
        android:textSize="@dimen/txt_large_size" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:src="@color/line2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/setting1_12"
        android:textColor="#a2a2a2"
        android:textSize="@dimen/txt_small_size" />

    
  
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="35dp"
        android:text="@string/setting1_21"
        android:textSize="@dimen/txt_large_size" />
    
      <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:src="@color/line2" />
      
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/setting1_22"
        android:textColor="#a2a2a2"
        android:textSize="@dimen/txt_small_size" />
        
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="80dp"
        android:text="@string/setting1_31"
        android:textSize="@dimen/txt_large_size" />
    
        <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:src="@color/line2" />
        
         <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/setting1_32"
        android:textColor="#a2a2a2"
        android:textSize="@dimen/txt_small_size" />
</LinearLayout>