<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/property_title"
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ed5736"
            android:gravity="center"
            android:text="@string/upload_photo"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_large_size" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_back_selector" />

        <Button
            android:id="@+id/ok"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/send"
            android:background="@null"
            android:textSize="@dimen/txt_normal_size"
            android:textColor="@android:color/white"
            android:gravity="center_vertical" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/photo"
        android:textColor="@color/text_color" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/linear" >
    </ImageView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/describe"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/describe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:hint="@string/input_photo_desc" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/linear" >
    </ImageView>

</LinearLayout>