<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/awake_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_fruit_back"
        android:text="@string/awake_time_3"
        android:textSize="@dimen/txt_normal_size" />

    <TextView
        android:id="@+id/awake_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_fruit_back"
        android:text="@string/awake_time_2"
        android:textSize="@dimen/txt_normal_size" />

    <TextView
        android:id="@+id/awake_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_fruit_back"
        android:text="@string/awake_time_1"
        android:textSize="@dimen/txt_normal_size" />

</LinearLayout>